--- a/parkinson-disease_prediction-with-smaller-features.ipynb
+++ b/parkinson-disease_prediction-with-smaller-features.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
     "from sklearn.metrics import accuracy_score, plot_confusion_matrix, classification_report\n",
     "from sklearn.feature_selection import SelectFromModel\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "\n",
+    "from sklearn.decomposition import PCA, KernelPCA\n",
     "from sklearn.ensemble import RandomForestClassifier, ExtraTreesClassifier\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.svm import SVC\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +463,7 @@
        "[8 rows x 753 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +701,7 @@
        "[5 rows x 754 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1116,7 +1116,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1128,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1149,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1181,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1191,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1302,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1326,7 +1326,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(604, 50)\n"
+     ]
+    }
+   ],
+   "source": [
+    "pca = PCA(n_components=50, svd_solver='arpack')\n",
+    "X_pca = pca.fit_transform(X_important_train)\n",
+    "print(X_pca.shape)\n",
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(604, 50)\n"
+     ]
+    }
+   ],
+   "source": [
+    "kpca = KernelPCA(n_components=50, kernel='poly')\n",
+    "X_kpca = kpca.fit_transform(X_important_train)\n",
+    "print(X_kpca.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1395,7 +1434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1427,29 +1466,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean cross-validated score of the best_estimator: 0.9418235013649163\n",
+      "Mean cross-validated score of the best_estimator: 0.9211162495708297\n",
       "Parameter setting that gave the best results:\n",
       "OrderedDict([('bootstrap', False),\n",
       "             ('criterion', 'entropy'),\n",
-      "             ('max_depth', None),\n",
-      "             ('max_features', 1.0),\n",
+      "             ('max_depth', 30),\n",
+      "             ('max_features', 0.6925964626866181),\n",
       "             ('min_samples_leaf', 1),\n",
-      "             ('min_samples_split', 4),\n",
-      "             ('n_estimators', 300)])\n"
+      "             ('min_samples_split', 2),\n",
+      "             ('n_estimators', 400)])\n"
      ]
     }
    ],
    "source": [
     "xtrees_model = ExtraTreesClassifier(random_state=RANDOM_SEED)\n",
     "\n",
-    "best_xtrees, best_xtrees_params = search_best(X_important_train,\n",
+    "best_xtrees, best_xtrees_params = search_best(X_pca,\n",
     "                                              y_train,\n",
     "                                              BayesSearchCV,\n",
     "                                              xtrees_model,\n",
@@ -1459,6 +1498,23 @@
     "                                              n_iter=100,\n",
     "                                              cv=5,\n",
     "                                              n_jobs=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(best_xtrees.score(X_pca, y_train))"
    ]
   },
   {
